implemented muxer and made little fixes